// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcTableFilter > should hide filters with "tw-hidden" class when "isHidden" is set 1`] = `
<div
  class="ec-text-filter ec-table-filter__filter-item tw-hidden tw-mr-8"
  data-test="ec-table-filter__filter-item ec-table-filter__filter-item-4"
  ishidden="true"
>
  <div
    class="ec-input-field"
    data-test="ec-input-field"
  >
    <!--v-if-->
    <input
      class="ec-input-field__input ec-input-field__input--has-left-icon"
      data-test="ec-input-field__input"
      id="ec-input-field-9"
      type="text"
    />
    <div
      class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--left"
      data-test="ec-input-field__left-icon-wrapper"
    >
      <svg
        class="ec-icon ec-input-field__icon"
        data-test="ec-input-field__left-icon"
        height="20"
        width="20"
      >
        <use
          xlink:href="#ec-simple-search"
        />
      </svg>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`EcTableFilter > should hide filters with "tw-hidden" class when "isHidden" is set 2`] = `
<div
  class="ec-text-filter ec-table-filter__filter-item tw-mr-8"
  data-test="ec-table-filter__filter-item ec-table-filter__filter-item-0"
  ishidden="false"
>
  <div
    class="ec-input-field"
    data-test="ec-input-field"
  >
    <!--v-if-->
    <input
      class="ec-input-field__input ec-input-field__input--has-left-icon"
      data-test="ec-input-field__input"
      id="ec-input-field-9"
      type="text"
    />
    <div
      class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--left"
      data-test="ec-input-field__left-icon-wrapper"
    >
      <svg
        class="ec-icon ec-input-field__icon"
        data-test="ec-input-field__left-icon"
        height="20"
        width="20"
      >
        <use
          xlink:href="#ec-simple-search"
        />
      </svg>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`EcTableFilter > should hide the clear filters button if there isn't any preselected filter 1`] = `
<section
  class="ec-table-filter"
  data-test="ec-table-filter"
>
  
  <div
    class="ec-sync-multiple-values-filter ec-table-filter__filter-item tw-mr-8"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-0"
  >
    <div
      class="ec-filter-popover"
      data-test="ec-sync-multiple-values-filter__trigger"
    >
      <ec-stub
        data-test="ec-stub ec-popover-stub"
        distance="8"
        placement="bottom-start"
        prevent-overflow="false"
      >
        
        <div
          class="ec-filter-popover__trigger"
          data-test="ec-filter-popover__trigger"
        >
          <button
            class="ec-filter-popover__label"
            data-test="ec-filter-popover__label"
            title="Payment status"
            type="button"
          >
            Payment status
          </button>
          <!--v-if-->
          <svg
            class="ec-icon ec-icon--interactive ec-filter-popover__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </div>
        
        
        <div
          class="ec-filter-popover__filter-content"
        >
          
          <div
            class="ec-multiple-values-selection"
            data-test="ec-multiple-values-selection"
          >
            <!--v-if-->
            
            <!--v-if-->
            <div
              class="ec-multiple-values-selection__values"
            >
              <ul>
                
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-1"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-1"
                        title="Paid"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Paid
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-1 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-2"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-2"
                        title="Cancelled"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Cancelled
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-2 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-3"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-3"
                        title="Overdue"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Overdue
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                
              </ul>
            </div>
            
          </div>
          
        </div>
        
      </ec-stub>
    </div>
  </div>
  <div
    class="ec-sync-multiple-values-filter ec-table-filter__filter-item tw-mr-8"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-1"
  >
    <div
      class="ec-filter-popover"
      data-test="ec-sync-multiple-values-filter__trigger"
    >
      <ec-stub
        data-test="ec-stub ec-popover-stub"
        distance="8"
        placement="bottom-start"
        prevent-overflow="false"
      >
        
        <div
          class="ec-filter-popover__trigger"
          data-test="ec-filter-popover__trigger"
        >
          <button
            class="ec-filter-popover__label"
            data-test="ec-filter-popover__label"
            title="Fee type"
            type="button"
          >
            Fee type
          </button>
          <!--v-if-->
          <svg
            class="ec-icon ec-icon--interactive ec-filter-popover__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </div>
        
        
        <div
          class="ec-filter-popover__filter-content"
        >
          
          <div
            class="ec-multiple-values-selection"
            data-test="ec-multiple-values-selection"
          >
            <!--v-if-->
            
            <!--v-if-->
            <div
              class="ec-multiple-values-selection__values"
            >
              <ul>
                
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-4"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-4"
                        title="Invoiced"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Invoiced
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-1 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-5"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-5"
                        title="Other type"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Other type
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                
              </ul>
            </div>
            
          </div>
          
        </div>
        
      </ec-stub>
    </div>
  </div>
  <div
    class="ec-filter-popover ec-table-filter__filter-item tw-mr-8"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-2 ec-date-range-filter__trigger"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      distance="8"
      placement="bottom-start"
      prevent-overflow="false"
    >
      
      <div
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
      >
        <button
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Due date"
          type="button"
        >
          Due date
        </button>
        <!--v-if-->
        <svg
          class="ec-icon ec-icon--interactive ec-filter-popover__icon"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </div>
      
      
      <div
        class="ec-filter-popover__filter-content"
      >
        
        <div
          class="ec-date-range-filter"
          data-test="ec-date-range-filter"
        >
          <div
            class="ec-date-range-filter__inputs-wrapper"
          >
            <div
              class="ec-input-field ec-date-range-filter__from-input"
              data-test="ec-input-field"
            >
              <label
                class="ec-input-field__label"
                data-test="ec-input-field__label"
                for="ec-input-field-6"
              >
                <span
                  class="ec-input-field__label-text"
                  data-test="ec-input-field__label-text"
                >
                  From
                  <!--v-if-->
                </span>
                <!--v-if-->
              </label>
              <input
                class="ec-input-field__input"
                data-test="ec-date-range-filter__from-input ec-input-field__input"
                id="ec-input-field-6"
                placeholder="dd/mm/yyyy"
                type="date"
              />
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="ec-input-field ec-date-range-filter__to-input"
              data-test="ec-input-field"
            >
              <label
                class="ec-input-field__label"
                data-test="ec-input-field__label"
                for="ec-input-field-7"
              >
                <span
                  class="ec-input-field__label-text"
                  data-test="ec-input-field__label-text"
                >
                  To
                  <!--v-if-->
                </span>
                <!--v-if-->
              </label>
              <input
                class="ec-input-field__input"
                data-test="ec-date-range-filter__to-input ec-input-field__input"
                id="ec-input-field-7"
                placeholder="dd/mm/yyyy"
                type="date"
              />
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <button
            class="ec-date-range-filter__clear-button"
            data-test="ec-date-range-filter__clear-button"
            disabled=""
            type="button"
          >
            Clear dates
          </button>
        </div>
        
      </div>
      
    </ec-stub>
  </div>
  <div
    class="ec-text-filter ec-table-filter__filter-item tw-mr-8"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-3"
  >
    <div
      class="ec-input-field"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        class="ec-input-field__input ec-input-field__input--has-left-icon"
        data-test="ec-input-field__input"
        id="ec-input-field-8"
        type="text"
      />
      <div
        class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--left"
        data-test="ec-input-field__left-icon-wrapper"
      >
        <svg
          class="ec-icon ec-input-field__icon"
          data-test="ec-input-field__left-icon"
          height="20"
          width="20"
        >
          <use
            xlink:href="#ec-simple-search"
          />
        </svg>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  
  <!--v-if-->
</section>
`;

exports[`EcTableFilter > should hide the clear filters button when the user deselect the all the filters manually 1`] = `
<section
  class="ec-table-filter"
  data-test="ec-table-filter"
  popover-options="[object Object]"
>
  
  <div
    class="ec-sync-multiple-values-filter ec-table-filter__filter-item tw-mr-8"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-0"
  >
    <div
      class="ec-filter-popover"
      data-test="ec-sync-multiple-values-filter__trigger"
    >
      <ec-stub
        data-test="ec-stub ec-popover-stub"
        distance="8"
        placement="bottom-start"
        prevent-overflow="false"
      >
        
        <div
          class="ec-filter-popover__trigger"
          data-test="ec-filter-popover__trigger"
        >
          <button
            class="ec-filter-popover__label"
            data-test="ec-filter-popover__label"
            title="Payment status"
            type="button"
          >
            Payment status
          </button>
          <!--v-if-->
          <svg
            class="ec-icon ec-icon--interactive ec-filter-popover__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </div>
        
        
        <div
          class="ec-filter-popover__filter-content"
        >
          
          <div
            class="ec-multiple-values-selection"
            data-test="ec-multiple-values-selection"
          >
            <!--v-if-->
            
            <!--v-if-->
            <div
              class="ec-multiple-values-selection__values"
            >
              <ul>
                
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-1"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-1"
                        title="Paid"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Paid
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-1 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-2"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-2"
                        title="Cancelled"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Cancelled
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-2 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-3"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-3"
                        title="Overdue"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Overdue
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                
              </ul>
            </div>
            
          </div>
          
        </div>
        
      </ec-stub>
    </div>
  </div>
  <div
    class="ec-sync-multiple-values-filter ec-table-filter__filter-item tw-mr-8"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-1"
  >
    <div
      class="ec-filter-popover"
      data-test="ec-sync-multiple-values-filter__trigger"
    >
      <ec-stub
        data-test="ec-stub ec-popover-stub"
        distance="8"
        placement="bottom-start"
        prevent-overflow="false"
      >
        
        <div
          class="ec-filter-popover__trigger"
          data-test="ec-filter-popover__trigger"
        >
          <button
            class="ec-filter-popover__label"
            data-test="ec-filter-popover__label"
            title="Fee type"
            type="button"
          >
            Fee type
          </button>
          <!--v-if-->
          <svg
            class="ec-icon ec-icon--interactive ec-filter-popover__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </div>
        
        
        <div
          class="ec-filter-popover__filter-content"
        >
          
          <div
            class="ec-multiple-values-selection"
            data-test="ec-multiple-values-selection"
          >
            <!--v-if-->
            
            <!--v-if-->
            <div
              class="ec-multiple-values-selection__values"
            >
              <ul>
                
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-4"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-4"
                        title="Invoiced"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Invoiced
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-1 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-5"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-5"
                        title="Other type"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Other type
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                
              </ul>
            </div>
            
          </div>
          
        </div>
        
      </ec-stub>
    </div>
  </div>
  <div
    class="ec-filter-popover ec-table-filter__filter-item tw-mr-8"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-2 ec-date-range-filter__trigger"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      distance="8"
      placement="bottom-start"
      prevent-overflow="false"
    >
      
      <div
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
      >
        <button
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Due date"
          type="button"
        >
          Due date
        </button>
        <!--v-if-->
        <svg
          class="ec-icon ec-icon--interactive ec-filter-popover__icon"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </div>
      
      
      <div
        class="ec-filter-popover__filter-content"
      >
        
        <div
          class="ec-date-range-filter"
          data-test="ec-date-range-filter"
        >
          <div
            class="ec-date-range-filter__inputs-wrapper"
          >
            <div
              class="ec-input-field ec-date-range-filter__from-input"
              data-test="ec-input-field"
            >
              <label
                class="ec-input-field__label"
                data-test="ec-input-field__label"
                for="ec-input-field-6"
              >
                <span
                  class="ec-input-field__label-text"
                  data-test="ec-input-field__label-text"
                >
                  From
                  <!--v-if-->
                </span>
                <!--v-if-->
              </label>
              <input
                class="ec-input-field__input"
                data-test="ec-date-range-filter__from-input ec-input-field__input"
                id="ec-input-field-6"
                placeholder="dd/mm/yyyy"
                type="date"
              />
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="ec-input-field ec-date-range-filter__to-input"
              data-test="ec-input-field"
            >
              <label
                class="ec-input-field__label"
                data-test="ec-input-field__label"
                for="ec-input-field-7"
              >
                <span
                  class="ec-input-field__label-text"
                  data-test="ec-input-field__label-text"
                >
                  To
                  <!--v-if-->
                </span>
                <!--v-if-->
              </label>
              <input
                class="ec-input-field__input"
                data-test="ec-date-range-filter__to-input ec-input-field__input"
                id="ec-input-field-7"
                placeholder="dd/mm/yyyy"
                type="date"
              />
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <button
            class="ec-date-range-filter__clear-button"
            data-test="ec-date-range-filter__clear-button"
            disabled=""
            type="button"
          >
            Clear dates
          </button>
        </div>
        
      </div>
      
    </ec-stub>
  </div>
  <div
    class="ec-text-filter ec-table-filter__filter-item tw-mr-8"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-3"
  >
    <div
      class="ec-input-field"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        class="ec-input-field__input ec-input-field__input--has-left-icon"
        data-test="ec-input-field__input"
        id="ec-input-field-8"
        type="text"
      />
      <div
        class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--left"
        data-test="ec-input-field__left-icon-wrapper"
      >
        <svg
          class="ec-icon ec-input-field__icon"
          data-test="ec-input-field__left-icon"
          height="20"
          width="20"
        >
          <use
            xlink:href="#ec-simple-search"
          />
        </svg>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  
  <!--v-if-->
</section>
`;

exports[`EcTableFilter > should render correctly if all the required props are passed 1`] = `
<section
  class="ec-table-filter"
  data-test="ec-table-filter"
>
  
  <div
    class="ec-sync-multiple-values-filter ec-table-filter__filter-item tw-mr-8"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-0"
  >
    <div
      class="ec-filter-popover"
      data-test="ec-sync-multiple-values-filter__trigger"
    >
      <ec-stub
        data-test="ec-stub ec-popover-stub"
        distance="8"
        placement="bottom-start"
        prevent-overflow="false"
      >
        
        <div
          class="ec-filter-popover__trigger"
          data-test="ec-filter-popover__trigger"
        >
          <button
            class="ec-filter-popover__label"
            data-test="ec-filter-popover__label"
            title="Payment status"
            type="button"
          >
            Payment status
          </button>
          <!--v-if-->
          <svg
            class="ec-icon ec-icon--interactive ec-filter-popover__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </div>
        
        
        <div
          class="ec-filter-popover__filter-content"
        >
          
          <div
            class="ec-multiple-values-selection"
            data-test="ec-multiple-values-selection"
          >
            <!--v-if-->
            
            <!--v-if-->
            <div
              class="ec-multiple-values-selection__values"
            >
              <ul>
                
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-1"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-1"
                        title="Paid"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Paid
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-1 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-2"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-2"
                        title="Cancelled"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Cancelled
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-2 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-3"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-3"
                        title="Overdue"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Overdue
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                
              </ul>
            </div>
            
          </div>
          
        </div>
        
      </ec-stub>
    </div>
  </div>
  <div
    class="ec-sync-multiple-values-filter ec-table-filter__filter-item tw-mr-8"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-1"
  >
    <div
      class="ec-filter-popover"
      data-test="ec-sync-multiple-values-filter__trigger"
    >
      <ec-stub
        data-test="ec-stub ec-popover-stub"
        distance="8"
        placement="bottom-start"
        prevent-overflow="false"
      >
        
        <div
          class="ec-filter-popover__trigger"
          data-test="ec-filter-popover__trigger"
        >
          <button
            class="ec-filter-popover__label"
            data-test="ec-filter-popover__label"
            title="Fee type"
            type="button"
          >
            Fee type
          </button>
          <!--v-if-->
          <svg
            class="ec-icon ec-icon--interactive ec-filter-popover__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </div>
        
        
        <div
          class="ec-filter-popover__filter-content"
        >
          
          <div
            class="ec-multiple-values-selection"
            data-test="ec-multiple-values-selection"
          >
            <!--v-if-->
            
            <!--v-if-->
            <div
              class="ec-multiple-values-selection__values"
            >
              <ul>
                
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-4"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-4"
                        title="Invoiced"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Invoiced
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-1 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-5"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-5"
                        title="Other type"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Other type
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                
              </ul>
            </div>
            
          </div>
          
        </div>
        
      </ec-stub>
    </div>
  </div>
  <div
    class="ec-filter-popover ec-table-filter__filter-item tw-mr-8"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-2 ec-date-range-filter__trigger"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      distance="8"
      placement="bottom-start"
      prevent-overflow="false"
    >
      
      <div
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
      >
        <button
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Due date"
          type="button"
        >
          Due date
        </button>
        <!--v-if-->
        <svg
          class="ec-icon ec-icon--interactive ec-filter-popover__icon"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </div>
      
      
      <div
        class="ec-filter-popover__filter-content"
      >
        
        <div
          class="ec-date-range-filter"
          data-test="ec-date-range-filter"
        >
          <div
            class="ec-date-range-filter__inputs-wrapper"
          >
            <div
              class="ec-input-field ec-date-range-filter__from-input"
              data-test="ec-input-field"
            >
              <label
                class="ec-input-field__label"
                data-test="ec-input-field__label"
                for="ec-input-field-6"
              >
                <span
                  class="ec-input-field__label-text"
                  data-test="ec-input-field__label-text"
                >
                  From
                  <!--v-if-->
                </span>
                <!--v-if-->
              </label>
              <input
                class="ec-input-field__input"
                data-test="ec-date-range-filter__from-input ec-input-field__input"
                id="ec-input-field-6"
                placeholder="dd/mm/yyyy"
                type="date"
              />
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="ec-input-field ec-date-range-filter__to-input"
              data-test="ec-input-field"
            >
              <label
                class="ec-input-field__label"
                data-test="ec-input-field__label"
                for="ec-input-field-7"
              >
                <span
                  class="ec-input-field__label-text"
                  data-test="ec-input-field__label-text"
                >
                  To
                  <!--v-if-->
                </span>
                <!--v-if-->
              </label>
              <input
                class="ec-input-field__input"
                data-test="ec-date-range-filter__to-input ec-input-field__input"
                id="ec-input-field-7"
                placeholder="dd/mm/yyyy"
                type="date"
              />
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <button
            class="ec-date-range-filter__clear-button"
            data-test="ec-date-range-filter__clear-button"
            disabled=""
            type="button"
          >
            Clear dates
          </button>
        </div>
        
      </div>
      
    </ec-stub>
  </div>
  <div
    class="ec-text-filter ec-table-filter__filter-item tw-mr-8"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-3"
  >
    <div
      class="ec-input-field"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        class="ec-input-field__input ec-input-field__input--has-left-icon"
        data-test="ec-input-field__input"
        id="ec-input-field-8"
        type="text"
      />
      <div
        class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--left"
        data-test="ec-input-field__left-icon-wrapper"
      >
        <svg
          class="ec-icon ec-input-field__icon"
          data-test="ec-input-field__left-icon"
          height="20"
          width="20"
        >
          <use
            xlink:href="#ec-simple-search"
          />
        </svg>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  
  <!--v-if-->
</section>
`;

exports[`EcTableFilter > should render custom attributes 1`] = `
<section
  class="my-class ec-table-filter"
  data-test="my-data-test ec-table-filter"
  id="my-id"
>
  
  <div
    class="ec-sync-multiple-values-filter ec-table-filter__filter-item tw-mr-8"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-0"
  >
    <div
      class="ec-filter-popover"
      data-test="ec-sync-multiple-values-filter__trigger"
    >
      <ec-stub
        data-test="ec-stub ec-popover-stub"
        distance="8"
        placement="bottom-start"
        prevent-overflow="false"
      >
        
        <div
          class="ec-filter-popover__trigger"
          data-test="ec-filter-popover__trigger"
        >
          <button
            class="ec-filter-popover__label"
            data-test="ec-filter-popover__label"
            title="Payment status"
            type="button"
          >
            Payment status
          </button>
          <!--v-if-->
          <svg
            class="ec-icon ec-icon--interactive ec-filter-popover__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </div>
        
        
        <div
          class="ec-filter-popover__filter-content"
        >
          
          <div
            class="ec-multiple-values-selection"
            data-test="ec-multiple-values-selection"
          >
            <!--v-if-->
            
            <!--v-if-->
            <div
              class="ec-multiple-values-selection__values"
            >
              <ul>
                
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-1"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-1"
                        title="Paid"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Paid
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-1 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-2"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-2"
                        title="Cancelled"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Cancelled
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-2 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-3"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-3"
                        title="Overdue"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Overdue
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                
              </ul>
            </div>
            
          </div>
          
        </div>
        
      </ec-stub>
    </div>
  </div>
  <div
    class="ec-sync-multiple-values-filter ec-table-filter__filter-item tw-mr-8"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-1"
  >
    <div
      class="ec-filter-popover"
      data-test="ec-sync-multiple-values-filter__trigger"
    >
      <ec-stub
        data-test="ec-stub ec-popover-stub"
        distance="8"
        placement="bottom-start"
        prevent-overflow="false"
      >
        
        <div
          class="ec-filter-popover__trigger"
          data-test="ec-filter-popover__trigger"
        >
          <button
            class="ec-filter-popover__label"
            data-test="ec-filter-popover__label"
            title="Fee type"
            type="button"
          >
            Fee type
          </button>
          <!--v-if-->
          <svg
            class="ec-icon ec-icon--interactive ec-filter-popover__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </div>
        
        
        <div
          class="ec-filter-popover__filter-content"
        >
          
          <div
            class="ec-multiple-values-selection"
            data-test="ec-multiple-values-selection"
          >
            <!--v-if-->
            
            <!--v-if-->
            <div
              class="ec-multiple-values-selection__values"
            >
              <ul>
                
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-4"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-4"
                        title="Invoiced"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Invoiced
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-1 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-5"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-5"
                        title="Other type"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Other type
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                
              </ul>
            </div>
            
          </div>
          
        </div>
        
      </ec-stub>
    </div>
  </div>
  <div
    class="ec-filter-popover ec-table-filter__filter-item tw-mr-8"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-2 ec-date-range-filter__trigger"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      distance="8"
      placement="bottom-start"
      prevent-overflow="false"
    >
      
      <div
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
      >
        <button
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Due date"
          type="button"
        >
          Due date
        </button>
        <!--v-if-->
        <svg
          class="ec-icon ec-icon--interactive ec-filter-popover__icon"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </div>
      
      
      <div
        class="ec-filter-popover__filter-content"
      >
        
        <div
          class="ec-date-range-filter"
          data-test="ec-date-range-filter"
        >
          <div
            class="ec-date-range-filter__inputs-wrapper"
          >
            <div
              class="ec-input-field ec-date-range-filter__from-input"
              data-test="ec-input-field"
            >
              <label
                class="ec-input-field__label"
                data-test="ec-input-field__label"
                for="ec-input-field-6"
              >
                <span
                  class="ec-input-field__label-text"
                  data-test="ec-input-field__label-text"
                >
                  From
                  <!--v-if-->
                </span>
                <!--v-if-->
              </label>
              <input
                class="ec-input-field__input"
                data-test="ec-date-range-filter__from-input ec-input-field__input"
                id="ec-input-field-6"
                placeholder="dd/mm/yyyy"
                type="date"
              />
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="ec-input-field ec-date-range-filter__to-input"
              data-test="ec-input-field"
            >
              <label
                class="ec-input-field__label"
                data-test="ec-input-field__label"
                for="ec-input-field-7"
              >
                <span
                  class="ec-input-field__label-text"
                  data-test="ec-input-field__label-text"
                >
                  To
                  <!--v-if-->
                </span>
                <!--v-if-->
              </label>
              <input
                class="ec-input-field__input"
                data-test="ec-date-range-filter__to-input ec-input-field__input"
                id="ec-input-field-7"
                placeholder="dd/mm/yyyy"
                type="date"
              />
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <button
            class="ec-date-range-filter__clear-button"
            data-test="ec-date-range-filter__clear-button"
            disabled=""
            type="button"
          >
            Clear dates
          </button>
        </div>
        
      </div>
      
    </ec-stub>
  </div>
  <div
    class="ec-text-filter ec-table-filter__filter-item tw-mr-8"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-3"
  >
    <div
      class="ec-input-field"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        class="ec-input-field__input ec-input-field__input--has-left-icon"
        data-test="ec-input-field__input"
        id="ec-input-field-8"
        type="text"
      />
      <div
        class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--left"
        data-test="ec-input-field__left-icon-wrapper"
      >
        <svg
          class="ec-icon ec-input-field__icon"
          data-test="ec-input-field__left-icon"
          height="20"
          width="20"
        >
          <use
            xlink:href="#ec-simple-search"
          />
        </svg>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  
  <!--v-if-->
</section>
`;

exports[`EcTableFilter > should render with pre-selected filters if the value prop is passed 1`] = `
<section
  class="ec-table-filter"
  data-test="ec-table-filter"
>
  
  <div
    class="ec-sync-multiple-values-filter ec-table-filter__filter-item tw-mr-8"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-0"
  >
    <div
      class="ec-filter-popover"
      data-test="ec-sync-multiple-values-filter__trigger"
    >
      <ec-stub
        data-test="ec-stub ec-popover-stub"
        distance="8"
        placement="bottom-start"
        prevent-overflow="false"
      >
        
        <div
          class="ec-filter-popover__trigger"
          data-test="ec-filter-popover__trigger"
        >
          <button
            class="ec-filter-popover__label"
            data-test="ec-filter-popover__label"
            title="Payment status"
            type="button"
          >
            Payment status
          </button>
          <!--v-if-->
          <svg
            class="ec-icon ec-icon--interactive ec-filter-popover__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </div>
        
        
        <div
          class="ec-filter-popover__filter-content"
        >
          
          <div
            class="ec-multiple-values-selection"
            data-test="ec-multiple-values-selection"
          >
            <!--v-if-->
            
            <!--v-if-->
            <div
              class="ec-multiple-values-selection__values"
            >
              <ul>
                
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-1"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-1"
                        title="Paid"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Paid
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-1 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-2"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-2"
                        title="Cancelled"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Cancelled
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-2 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-3"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-3"
                        title="Overdue"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Overdue
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                
              </ul>
            </div>
            
          </div>
          
        </div>
        
      </ec-stub>
    </div>
  </div>
  <div
    class="ec-sync-multiple-values-filter ec-table-filter__filter-item tw-mr-8"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-1"
  >
    <div
      class="ec-filter-popover"
      data-test="ec-sync-multiple-values-filter__trigger"
    >
      <ec-stub
        data-test="ec-stub ec-popover-stub"
        distance="8"
        placement="bottom-start"
        prevent-overflow="false"
      >
        
        <div
          class="ec-filter-popover__trigger"
          data-test="ec-filter-popover__trigger"
        >
          <button
            class="ec-filter-popover__label"
            data-test="ec-filter-popover__label"
            title="Fee type"
            type="button"
          >
            Fee type
          </button>
          <span
            class="ec-badge ec-badge--info ec-filter-popover__badge"
            data-test="ec-badge"
          >
            
            1
            
          </span>
          <svg
            class="ec-icon ec-icon--interactive ec-filter-popover__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </div>
        
        
        <div
          class="ec-filter-popover__filter-content"
        >
          
          <div
            class="ec-multiple-values-selection"
            data-test="ec-multiple-values-selection"
          >
            <!--v-if-->
            
            <!--v-if-->
            <div
              class="ec-multiple-values-selection__values"
            >
              <ul>
                
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-deselect ec-multiple-values-selection__checkbox-deselect-0 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-4"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <svg
                          class="ec-icon ec-checkbox__check-icon"
                          data-test="ec-checkbox__check-icon"
                          height="16"
                          width="16"
                        >
                          <use
                            xlink:href="#ec-simple-check"
                          />
                        </svg>
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-4"
                        title="Invoiced"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Invoiced
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                <li
                  class="ec-multiple-values-selection__value-wrapper"
                  data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
                >
                  <div
                    class="ec-checkbox ec-multiple-values-selection__checkbox"
                    data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-1 ec-checkbox"
                  >
                    <input
                      class="ec-checkbox__input"
                      data-test="ec-checkbox__input"
                      id="ec-checkbox-5"
                      type="checkbox"
                    />
                    <div
                      class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                    >
                      <span
                        class="ec-checkbox__check-icon-wrapper"
                        data-test="ec-checkbox__check-icon-wrapper"
                      >
                        <!--v-if-->
                      </span>
                      <label
                        class="ec-checkbox__label ec-checkbox__label--is-single-line"
                        data-test="ec-checkbox__label"
                        for="ec-checkbox-5"
                        title="Other type"
                      >
                        
                        <div
                          class="ec-multiple-values-selection__label-wrapper"
                        >
                          <!--v-if-->
                          <span
                            class="ec-multiple-values-selection__label-text"
                          >
                            Other type
                          </span>
                        </div>
                        
                      </label>
                    </div>
                    <!--v-if-->
                  </div>
                </li>
                
              </ul>
            </div>
            
          </div>
          
        </div>
        
      </ec-stub>
    </div>
  </div>
  <div
    class="ec-filter-popover ec-table-filter__filter-item tw-mr-8"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-2 ec-date-range-filter__trigger"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      distance="8"
      placement="bottom-start"
      prevent-overflow="false"
    >
      
      <div
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
      >
        <button
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Due date"
          type="button"
        >
          Due date
        </button>
        <!--v-if-->
        <svg
          class="ec-icon ec-icon--interactive ec-filter-popover__icon"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </div>
      
      
      <div
        class="ec-filter-popover__filter-content"
      >
        
        <div
          class="ec-date-range-filter"
          data-test="ec-date-range-filter"
        >
          <div
            class="ec-date-range-filter__inputs-wrapper"
          >
            <div
              class="ec-input-field ec-date-range-filter__from-input"
              data-test="ec-input-field"
            >
              <label
                class="ec-input-field__label"
                data-test="ec-input-field__label"
                for="ec-input-field-6"
              >
                <span
                  class="ec-input-field__label-text"
                  data-test="ec-input-field__label-text"
                >
                  From
                  <!--v-if-->
                </span>
                <!--v-if-->
              </label>
              <input
                class="ec-input-field__input"
                data-test="ec-date-range-filter__from-input ec-input-field__input"
                id="ec-input-field-6"
                placeholder="dd/mm/yyyy"
                type="date"
              />
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="ec-input-field ec-date-range-filter__to-input"
              data-test="ec-input-field"
            >
              <label
                class="ec-input-field__label"
                data-test="ec-input-field__label"
                for="ec-input-field-7"
              >
                <span
                  class="ec-input-field__label-text"
                  data-test="ec-input-field__label-text"
                >
                  To
                  <!--v-if-->
                </span>
                <!--v-if-->
              </label>
              <input
                class="ec-input-field__input"
                data-test="ec-date-range-filter__to-input ec-input-field__input"
                id="ec-input-field-7"
                placeholder="dd/mm/yyyy"
                type="date"
              />
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <button
            class="ec-date-range-filter__clear-button"
            data-test="ec-date-range-filter__clear-button"
            disabled=""
            type="button"
          >
            Clear dates
          </button>
        </div>
        
      </div>
      
    </ec-stub>
  </div>
  <div
    class="ec-text-filter ec-table-filter__filter-item tw-mr-8"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-3"
  >
    <div
      class="ec-input-field"
      data-test="ec-input-field"
    >
      <!--v-if-->
      <input
        class="ec-input-field__input ec-input-field__input--has-icon ec-input-field__input--has-left-icon"
        data-test="ec-input-field__input"
        id="ec-input-field-8"
        type="text"
      />
      <div
        class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--left"
        data-test="ec-input-field__left-icon-wrapper"
      >
        <svg
          class="ec-icon ec-input-field__icon"
          data-test="ec-input-field__left-icon"
          height="20"
          width="20"
        >
          <use
            xlink:href="#ec-simple-search"
          />
        </svg>
      </div>
      <div
        class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
        data-test="ec-input-field__icon-wrapper"
      >
        <!--v-if-->
        <svg
          class="ec-icon ec-input-field__icon"
          data-test="ec-input-field__icon"
          height="20"
          width="20"
        >
          <use
            xlink:href="#ec-simple-close"
          />
        </svg>
      </div>
      <!--v-if-->
    </div>
  </div>
  
  <button
    class="ec-table-filter__clear-filters-button"
    data-test="ec-table-filter__clear-filters-button"
    type="button"
  >
    Clear filters
  </button>
</section>
`;
